<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        tools:context="com.example.android.texasamquiz.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:contentDescription="@string/logo_description"
            android:scaleType="centerCrop"
            android:src="@drawable/tamprimarymarka"
            app:srcCompat="@drawable/tamprimarymarka"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/questionOne"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question1">

                <RadioButton
                    android:id="@+id/answer1A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/a1" />

                <RadioButton
                    android:id="@+id/answer1B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/b1" />

                <RadioButton
                    android:id="@+id/answer1C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/c1" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/questionTwo"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question2">

                <RadioButton
                    android:id="@+id/answer2A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/a2" />

                <RadioButton
                    android:id="@+id/answer2B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/b2" />

                <RadioButton
                    android:id="@+id/answer2C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"
                    android:text="@string/c2" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionThree"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question3">

                <RadioButton
                    android:id="@+id/answer3A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a3"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"/>

                <RadioButton
                    android:id="@+id/answer3B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b3"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionFour"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question4">

                <RadioButton
                    android:id="@+id/answer4A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a4"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"/>

                <RadioButton
                    android:id="@+id/answer4B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b4"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"/>

                <RadioButton
                    android:id="@+id/answer4C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c4"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionFive"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question5">

                <RadioButton
                    android:id="@+id/answer5A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a5"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"/>

                <RadioButton
                    android:id="@+id/answer5B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b5"
                    android:layout_marginStart="20dp"
                    android:scaleX="0.90"
                    android:scaleY="0.90"/>

            </RadioGroup>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkButton"
            android:layout_gravity="center_horizontal"
            android:onClick="checkAnswers"/>

    </LinearLayout>
</ScrollView>

